# MethOpt

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/include/: lab1.hpp  lab1ui.hpp  optimizerUI.hpp
lab1/src/: lab1.cpp  lab1ui.cpp
lab1cli/: CMakeLists.txt
lab1cli/src/: main.cpp
lab2cli/: CMakeLists.txt
lab2cli/src/: main.cpp
lab3cli/: CMakeLists.txt  input.txt
lab3cli/src/: genTests.cpp  main.cpp  runTests.cpp
lab4cli/: CMakeLists.txt
lab4cli/src/: functions.inl  main.cpp
lib/: CMakeLists.txt
lib/include/: function.hpp  methods.hpp  multi_function.hpp  multi_helpers.hpp  multi_methods.hpp  multi_optimizer.hpp  optimizer.hpp
lib/src/: function.cpp  multi_function.cpp  multi_optimizer.cpp  optimizer.cpp
liblab3/: CMakeLists.txt
liblab3/include/: conjugate.hpp  gauss.hpp  generator.hpp  matrix.hpp  utils.hpp
liblab3/src/: generator.cpp  matrix.cpp  utils.cpp
liblab4/: CMakeLists.txt
liblab4/include/: helpers.h  marquardt.h  newton.h  optimizer.h  quazi.h
liblab4/src/: newton.cpp
scripts/: .gitignore  common.py  main.py  plot_funtion.py
scripts/lab1/: common.py
scripts/lab1/tables/: brent.csv  dichotomy.csv
scripts/lab2/: common.py  input.txt  main.py  report.org  report.tex
scripts/lab3/: plots.py  report.tex
scripts/lab4/: Main.ipynb  report.tex
scripts/tables/: fibonacci.csv  goldensections.csv  parabolas.csv
